[package]
name = "parity-map"
version = "0.1.1"
edition = "2021"
authors = ["beetle"]
repository = "https://github.com/Mearkatz/parity-map"
description = "For mapping integers based on their parity"
license = "MIT"

[lints.rust]
missing_docs = { level = "deny", priority = -1 }

[lints.clippy]
enum_glob_use = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -3 }
nursery = { level = "deny", priority = -4 }
unwrap_used = { level = "deny", priority = -5 }
expect_used = { level = "deny", priority = -6 }

[dependencies]
either = "1.13.0"
num = "0.4.3"
